# furthrmind-sdk

./: .gitignore  README.md  __init__.py  experiment.html  mkdocs.yml  pyproject.toml
Sphinx-docs/: conf.py  furthrmind_sdk.collection.rst  furthrmind_sdk.rst  index.rst
docs/: category.md  column.md  comboboxentry.md  datatable.md  experiment.md  field.md  fielddata.md  file.md  group.md  index.md  overview.md  project.md  references.md  researchitem.md  sample.md  unit.md
examples/: create_group_and_exp.py  get_experiments.py  http_request_form.py
furthrmind/: __init__.py
furthrmind/collection/: baseclass.py  category.py  column.py  comboboxentry.py  datatable.py  experiment.py  field.py  fielddata.py  group.py  project.py  researchitem.py  sample.py  unit.py
furthrmind_sdk/: __init__.py  file_loader.py  furthrmind.py  utils.py
furthrmind_sdk/collection/: __init__.py  baseclass.py  column.py  comboboxentry.py  datatable.py  experiment.py  field.py  fielddata.py  file.py  group.py  import_collection.py  project.py  researchitem.py  sample.py  unit.py
site/: 404.html  index.html  objects.inv
site/category/: index.html
site/column/: index.html
site/comboboxentry/: index.html
site/datatable/: index.html
site/experiment/: index.html
site/field/: index.html
site/fielddata/: index.html
site/file/: index.html
site/group/: index.html
site/overview/: index.html
tests/: __init__.py  desalination_degree.py  test_column.py  test_datatable.py  test_experiment.py  test_fielddata.py  test_project.py  test_researchitem.py  test_sample.py
(+15 files in other folders)
