[tool.poetry]
name = "furthrmind-sdk"
version = "0.1.0"
description = "Official python wrapper for the FURTHRmind rest api."
authors = ["Daniel Menne"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "*"
pymongo = "^4.6.2"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
